--- a/package.json
+++ b/package.json
@@ -12,17 +12,27 @@
   "dependencies": {
     "@fontsource/inter": "^4.5.14",
     "@next/font": "13.1.1",
+    "@tanstack/react-query": "^4.20.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.1",
+    "classnames": "^2.3.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "formik": "^2.2.9",
+    "html-react-parser": "^3.0.6",
+    "lodash": "^4.17.21",
     "next": "13.1.1",
+    "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-icons": "^4.7.1",
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
