--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "paths": {
       "@app/*": ["app/*"],
       "@components/*": ["components/*"],
+      "@hooks/*": ["hooks/*"],
+      "@lib/*": ["lib/*"],
       "@styles/*": ["styles/*"]
     },
     "target": "es5",
