--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/inter": "^4.5.14",
     "@next/font": "13.1.1",
+    "@prisma/client": "4.8.0",
     "@tanstack/react-query": "^4.20.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -39,6 +40,7 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "prisma": "^4.8.0",
     "tailwindcss": "^3.2.4"
   }
 }
